practice/networkpolicies/task-1/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/name: webserver
  name: task-1-webserver
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
      - containerPort: 80
        name: http
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/name: client
  name: task-1-client
spec:
  containers:
  - image: busybox
    name: busybox
    command:
      - /bin/sh
      - -c
    args:
      - "sleep 3600"
