practice/networkpolicies/task-1/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: task-1-deny-all-please-ignore
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: task-1-client-network-policy
spec:
  podSelector:
    matchLabels:
      ?
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: webserver
    ports:
    - protocol: TCP
      port: 80
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: task-1-allow-webserver-to-receive-traffic-from-client
spec:
  podSelector:
    matchLabels:
      ?
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: ?
    ports:
    - protocol: TCP
      port: 80
